--- a/style.css
+++ b/style.css
@@ -64,3 +64,9 @@ background-color: #9f9b9b;
 box-shadow: 0 5px #666;
 transform: translateY(4px);
 }
+
+.active{
+background-color: #9f9b9b;
+box-shadow: 0 5px #666;
+transform: translateY(4px);
+}
